--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -y r-base
 install:
-- git clone https://omnia-bamboo:$OMNIA_CI_PASSWORD@github.com/CommBank/ci.git
+- git clone https://github.com/CommBank/ci.git
+- chmod ugo+x ci/*
 - ci/sbt-setup.sh
 - wget http://rforge.net/Rserve/snapshot/Rserve_1.8-0.tar.gz
 - sudo R CMD INSTALL Rserve_1.8-0.tar.gz
@@ -23,5 +24,4 @@ after_script:
 - rm -rf ci
 env:
   global:
-  - secure: Bzzeu3juqhsLhN1BgCVj7LWvNjZtWzQ4M/5cyUS5M2xXllrOKSR6NilPA0syB1UgtnKegwhVchCqE8E+CmEiVvbzIylMnR7rTmgThJ7L0zn/EAbi+yN1k471DvYBLCvigtLWNzaEX1bIkXj90ezvq+UplMOBtDOSI1P5Fex2mjw=
-  - secure: MrIu6A3V5/O51xgat3O+kkZ/knVpLQTQOZnrGF/6XSmIQ7e/CDUDZIEDXV7rONE+ql8BN3QjYko6zF+qvqiYHuTNag/FJbSR0pjnYYrfL33JZGBwkj2GYkxXtB0PsSeRRk6ABoEy8+JsQaK3QctpbaA3F9YZSZepKLpQYxshFiA=
+    secure: UPV9hsHQ05jVoaoix7CzYaN8395BLX2w7ASYlwyiv1adbIvJnRdpxhAsmtI+FmW4So048qu8ZwoLTrvzXsGEhW75vEtf9RldbaXyMRYGOTtJkFjHkLPIB+ceJ/v9gfmp3Ase8pRNb5CjlsyGYBhj8fnHeECe5tawAiQXbwecWeM=
